[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "winuvloop"
version = "0.1.4"
description = "winuvloop is a Python package that automatically installs and configures the optimal event loop for your platform, setting up uvloop on Linux/POSIX systems and winloop on Windows, ensuring seamless cross-platform development."
authors = ["Aviad Rozenhek <aviadr1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvloop = {version = "*", markers = "sys_platform != 'win32'"}
winloop = {version = "*", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
twine = "^5.1.1"
bump2version = "^1.0.1"
